extern/Hexapod/win_32/XPS_Q8_drivers.h

DLL int __stdcall XYZGroupPositionCorrectedProfilerGet (int SocketIndex, char * GroupName, double PositionX, double PositionY, double PositionZ, double * CorrectedProfilerPositionX, double * CorrectedProfilerPositionY, double * CorrectedProfilerPositionZ);  /* Return corrected profiler positions */
DLL int __stdcall XYZGroupPositionPCORawEncoderGet (int SocketIndex, char * GroupName, double PositionX, double PositionY, double PositionZ, double * PCORawPositionX, double * PCORawPositionY, double * PCORawPositionZ);  /* Return PCO raw encoder positions */
DLL int __stdcall XYZSplineVerification (int SocketIndex, char * GroupName, char * TrajectoryFileName);  /* XYZ trajectory verifivation */
DLL int __stdcall XYZSplineVerificationResultGet (int SocketIndex, char * PositionerName, char * FileName, double * MinimumPosition, double * MaximumPosition, double * MaximumVelocity, double * MaximumAcceleration);  /* XYZ trajectory verification result get */
DLL int __stdcall XYZSplineExecution (int SocketIndex, char * GroupName, char * TrajectoryFileName, double Velocity, double Acceleration);  /* XYZ trajectory execution */
DLL int __stdcall XYZSplineParametersGet (int SocketIndex, char * GroupName, char * FileName, double * Velocity, double * Acceleration, int * CurrentElementNumber);  /* XYZ trajectory get parameters */
DLL int __stdcall TZPVTVerification (int SocketIndex, char * GroupName, char * TrajectoryFileName);  /* TZ PVT trajectory verification */
DLL int __stdcall TZPVTVerificationResultGet (int SocketIndex, char * PositionerName, char * FileName, double * MinimumPosition, double * MaximumPosition, double * MaximumVelocity, double * MaximumAcceleration);  /* TZ PVT trajectory verification result get */
DLL int __stdcall TZPVTExecution (int SocketIndex, char * GroupName, char * TrajectoryFileName, int ExecutionNumber);  /* TZ PVT trajectory execution */
DLL int __stdcall TZPVTParametersGet (int SocketIndex, char * GroupName, char * FileName, int * CurrentElementNumber);  /* TZ PVT trajectory get parameters */
DLL int __stdcall TZPVTPulseOutputSet (int SocketIndex, char * GroupName, int StartElement, int EndElement, double TimeInterval);  /* Configure pulse output on trajectory */
DLL int __stdcall TZPVTPulseOutputGet (int SocketIndex, char * GroupName, int * StartElement, int * EndElement, double * TimeInterval);  /* Get pulse output on trajectory configuration */
DLL int __stdcall TZPVTLoadToMemory (int SocketIndex, char * GroupName, char * TrajectoryPart);  /* TZ Load PVT trajectory through function */
DLL int __stdcall TZPVTResetInMemory (int SocketIndex, char * GroupName);  /* TZ PVT trajectory reset in memory */
DLL int __stdcall TZFocusModeEnable (int SocketIndex, char * GroupName);  /* Enable the focus mode */
DLL int __stdcall TZFocusModeDisable (int SocketIndex, char * GroupName);  /* Disable the focus mode */
DLL int __stdcall TZTrackingUserMaximumZZZTargetDifferenceGet (int SocketIndex, char * GroupName, double * UserMaximumZZZTargetDifference);  /* Get user maximum ZZZ target difference for tracking control */
DLL int __stdcall TZTrackingUserMaximumZZZTargetDifferenceSet (int SocketIndex, char * GroupName, double UserMaximumZZZTargetDifference);  /* Set user maximum ZZZ target difference for tracking control */
DLL int __stdcall FocusProcessSocketReserve (int SocketIndex);  /* Set user maximum ZZZ target difference for tracking control */
DLL int __stdcall FocusProcessSocketFree (int SocketIndex);  /* Set user maximum ZZZ target difference for tracking control */
DLL int __stdcall PositionerMotorOutputOffsetGet (int SocketIndex, char * PositionerName, double * PrimaryDAC1, double * PrimaryDAC2, double * SecondaryDAC1, double * SecondaryDAC2);  /* Get soft (user defined) motor output DAC offsets */
DLL int __stdcall PositionerMotorOutputOffsetSet (int SocketIndex, char * PositionerName, double PrimaryDAC1, double PrimaryDAC2, double SecondaryDAC1, double SecondaryDAC2);  /* Set soft (user defined) motor output DAC offsets */
DLL int __stdcall SingleAxisThetaPositionRawGet (int SocketIndex, char * GroupName, double * RawEncoderPosition1, double * RawEncoderPosition2, double * RawEncoderPosition3);  /* Get raw encoder positions for single axis theta encoder */
DLL int __stdcall EEPROMCIESet (int SocketIndex, int CardNumber, char * ReferenceString);  /* Get raw encoder positions for single axis theta encoder */
DLL int __stdcall EEPROMDACOffsetCIESet (int SocketIndex, int PlugNumber, double DAC1Offset, double DAC2Offset);  /* Get raw encoder positions for single axis theta encoder */
DLL int __stdcall EEPROMDriverSet (int SocketIndex, int PlugNumber, char * ReferenceString);  /* Get raw encoder positions for single axis theta encoder */
DLL int __stdcall EEPROMINTSet (int SocketIndex, int CardNumber, char * ReferenceString);  /* Get raw encoder positions for single axis theta encoder */
DLL int __stdcall CPUCoreAndBoardSupplyVoltagesGet (int SocketIndex, double * VoltageCPUCore, double * SupplyVoltage1P5V, double * SupplyVoltage3P3V, double * SupplyVoltage5V, double * SupplyVoltage12V, double * SupplyVoltageM12V, double * SupplyVoltageM5V, double * SupplyVoltage5VSB);  /* Get raw encoder positions for single axis theta encoder */
DLL int __stdcall CPUTemperatureAndFanSpeedGet (int SocketIndex, double * CPUTemperature, double * CPUFanSpeed);  /* Get raw encoder positions for single axis theta encoder */
DLL int __stdcall ActionListGet (int SocketIndex, char * ActionList);  /* Action list */
DLL int __stdcall ActionExtendedListGet (int SocketIndex, char * ActionList);  /* Action extended list */
DLL int __stdcall APIExtendedListGet (int SocketIndex, char * Method);  /* API method list */
DLL int __stdcall APIListGet (int SocketIndex, char * Method);  /* API method list without extended API */
DLL int __stdcall ControllerStatusListGet (int SocketIndex, char * ControllerStatusList);  /* Controller status list */
DLL int __stdcall ErrorListGet (int SocketIndex, char * ErrorsList);  /* Error list */
DLL int __stdcall EventListGet (int SocketIndex, char * EventList);  /* General event list */
DLL int __stdcall GatheringListGet (int SocketIndex, char * list);  /* Gathering type list */
DLL int __stdcall GatheringExtendedListGet (int SocketIndex, char * list);  /* Gathering type extended list */
DLL int __stdcall GatheringExternalListGet (int SocketIndex, char * list);  /* External Gathering type list */
DLL int __stdcall GroupStatusListGet (int SocketIndex, char * GroupStatusList);  /* Group status list */
DLL int __stdcall HardwareInternalListGet (int SocketIndex, char * InternalHardwareList);  /* Internal hardware list */
DLL int __stdcall HardwareDriverAndStageGet (int SocketIndex, int PlugNumber, char * DriverName, char * StageName);  /* Smart hardware */
DLL int __stdcall ObjectsListGet (int SocketIndex, char * ObjectsList);  /* Group name and positioner name */
DLL int __stdcall PositionerErrorListGet (int SocketIndex, char * PositionerErrorList);  /* Positioner error list */
DLL int __stdcall PositionerHardwareStatusListGet (int SocketIndex, char * PositionerHardwareStatusList);  /* Positioner hardware status list */
DLL int __stdcall PositionerDriverStatusListGet (int SocketIndex, char * PositionerDriverStatusList);  /* Positioner driver status list */
DLL int __stdcall ReferencingActionListGet (int SocketIndex, char * list);  /* Get referencing action list */
DLL int __stdcall ReferencingSensorListGet (int SocketIndex, char * list);  /* Get referencing sensor list */
DLL int __stdcall PrepareForUpdate (int SocketIndex);  /* Prepare for update controller */
DLL int __stdcall GatheringUserDatasGet (int SocketIndex, double * UserData1, double * UserData2, double * UserData3, double * UserData4, double * UserData5, double * UserData6, double * UserData7, double * UserData8);  /* Return UserDatas values */
DLL int __stdcall ControllerMotionKernelMinMaxTimeLoadGet (int SocketIndex, double * MinimumCPUTotalLoadRatio, double * MaximumCPUTotalLoadRatio, double * MinimumCPUCorrectorLoadRatio, double * MaximumCPUCorrectorLoadRatio, double * MinimumCPUProfilerLoadRatio, double * MaximumCPUProfilerLoadRatio, double * MinimumCPUServitudesLoadRatio, double * MaximumCPUServitudesLoadRatio);  /* Get controller motion kernel minimum and maximum time load */
DLL int __stdcall ControllerMotionKernelMinMaxTimeLoadReset (int SocketIndex);  /* Reset controller motion kernel min/max time load */
DLL int __stdcall ControllerMotionKernelPeriodMinMaxGet (int SocketIndex, double * MinimumCorrectorPeriod, double * MaximumCorrectorPeriod, double * MinimumProfilerPeriod, double * MaximumProfilerPeriod, double * MinimumServitudesPeriod, double * MaximumServitudesPeriod);  /* Get controller motion kernel min/max periods */
DLL int __stdcall ControllerMotionKernelPeriodMinMaxReset (int SocketIndex);  /* Reset controller motion kernel min/max periods */